-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.6.0, Lustre 2.5.2
-
2
-
14517
There is a perforamnce regression of "FileRead" metadata operation caused by fixes of LU-4398.
Please see below performance difference with/without LU-4398 patches.
It's simple mdtest run on single client with single thread.
#mpirun -np 1 -ppn 1 -hostfile ./hostfile ./mdtest -n 100000 -i 1 -p 5 -u -v -F -d mdtest.out v2_5_2_RC1 SUMMARY: (of 1 iterations) Operation Max Min Mean Std Dev --------- --- --- ---- ------- File creation : 3478.187 3478.187 3478.187 0.000 File stat : 4514.273 4514.273 4514.273 0.000 File read : 515.113 515.113 515.113 0.000 File removal : 6499.513 6499.513 6499.513 0.000 Tree creation : 3908.951 3908.951 3908.951 0.000 Tree removal : 428.646 428.646 428.646 0.000 v2_5_2_RC1 + revert "LU-4398 mdt: acquire an open lock for write or execute" (97bfe7a3c0fc74fb0e56cbc1ea9cb827fb657b48) SUMMARY: (of 1 iterations) Operation Max Min Mean Std Dev --------- --- --- ---- ------- File creation : 3575.570 3575.570 3575.570 0.000 File stat : 4708.052 4708.052 4708.052 0.000 File read : 5348.987 5348.987 5348.987 0.000 File removal : 6509.834 6509.834 6509.834 0.000 Tree creation : 3816.473 3816.473 3816.473 0.000 Tree removal : 400.143 400.143 400.143 0.000