LU-5197 mdt: try to return layout lock on open

In mdt_object_open_lock() use a local lock handle (MDT_LH_LOCAL) only
when we need to revoke a lease. This unbotches the handling of
try_layout introduced by the fix for LU-4398 mdt: acquire an open lock
for write or execute (708d85a652a77f85153790e6cca1b7a2b91947cf).

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ide855f0b3fe2b8418fc4af8a4cf64ff5eb60e233